# SCoro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SCoro.hpp  Stages.hpp  composable_example.cpp  coroutine_cpp20_example.cpp  event_example.cpp  event_example.hpp  generator_example.cpp  main.cpp  resume_on_other_thread.cpp  timing_example.cpp
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  composable.cpp  coroutine_cpp20.cpp  event.cpp  generator.cpp  platform_config.h.in  swap_threads.cpp  timing.cpp
inc/scoro/: SCoro.hpp
